--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
             Lmao, 2D shait
         </div>
     </div>
+    <div id="1DShait" class="boxShait" onclick="alert('Honestly, what did you expect? 【ツ】'); alert('Oh, now you\'re stuck here 【ツ】'); alert('Aw, you still here? What? You wanna chitchat or something? 【ツ】'); alert('Im not that good at chitchatting so... What are you doing this instance in order to achieve your life long dream? 【ツ】'); alert('Maybe you don\'t have a dream.. 【ツ】'); alert('Might as well waste your time on this masterpiece right? 【ツ】');"> <!-- https://1lineart.kulaone.com/#/ -->
+        <div>
+            Lmao, 1D shait
+        </div>
+    </div>
 </nav>
 
 <script src="./main.js" type="module"></script>
