--- a/index.html
+++ b/index.html
@@ -34,10 +34,20 @@
             justify-content: center;
             width: 100vw;
         }
+        #canvas1{
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
 
     </style>
 </head>
 <body>
+
+<canvas id="canvas1" style="display: none"></canvas>
+
 <nav class="absolutVodka">
     <div id="3DShait" class="boxShait">
         <div>
@@ -56,7 +66,10 @@
     </div>
 </nav>
 
+
+
 <script src="./main.js" type="module"></script>
+<script src="./2DGraphics.js"></script>
 
 </body>
 </html>
