overflow hidden index.html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         *{
             margin: 0;
             padding: 0;
+            overflow: hidden;
         }/* it works okay, CSS isn't logic based anyway*/
         .boxShait{
             background-color: blue;
