fugly fps counter 2DGraphics.js

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
 <canvas id="canvas1" style="display: none"></canvas>
 
 <nav class="absolutVodka">
+    <div class="boxShait">
+        <div id="fps">
+            fps
+        </div>
+    </div>
     <div id="3DShait" class="boxShait">
         <div>
             Lmao, 3D shait
