--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
 
 
 
-<script src="./main.js" type="module"></script>
-<script src="./2DGraphics.js"></script>
+<script src="./main.js" type="module"></script> <!-- Has to be module -->
+<script src="./2DGraphics.js" type="text/javascript"></script>
+<script src="eventListener.js" type="text/javascript"></script>
+<script src="effects.js" type="text/javascript"></script>
 
 </body>
 </html>
