--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
     </style>
 </head>
 <body>
-
+<canvas id="canvas2" style="position: absolute"></canvas>
 <canvas id="canvas1" style="display: none"></canvas>
+
 
 <nav class="absolutVodka">
     <div class="boxShait">
